# DockerSwarm

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.override.yaml  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: docker.yaml  docs.yaml  hive.yaml  spy.yaml  worker.yaml
hive/: .gitattributes  Cargo.toml  Dockerfile  index.html
hive/assets/: manifest.json  sw.js
hive/src/: app.rs  lib.rs  main.rs
hive/src/app/: home.rs  manual.rs  mod.rs  monitor.rs
spy/: Cargo.toml  Dockerfile
spy/src/: inspect.rs  lib.rs  main.rs  ping.rs  stack.rs
spy/src/docker/: inspect.rs  mod.rs  service.rs  stack.rs
worker/: Cargo.toml  Dockerfile
worker/src/: lib.rs  main.rs  ping.rs  websocket.rs
