[package]
name = "hive"
version = "0.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
log.workspace = true

[dependencies.eframe]
version = "0.31.0"
default-features = false
features = ["accesskit", "default_fonts", "glow"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[dependencies.egui_form]
version = "0.5.0"
features = ["validator_garde"]

[dependencies.garde]
version = "0.22.0"
features = ["derive"]

[dependencies.web-sys]
version = "0.3.77"
features = ["WebSocket", "MessageEvent"]
