[package]
name = "spy"
version = "0.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies]
ctrlc.workspace = true
tungstenite.workspace = true
