[package]
name = "worker"
version = "0.0.0"
authors = ["Lieselotte"]
repository = "https://github.com/ShE3py/DockerSwarm/"
license = "AGPL-3.0-or-later"
categories = ["algorithms", "cryptography"]
keywords = []
edition = "2021"
rust-version = "1.74"
publish = false

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "nightlydoc"]

[dependencies.hex]
version = "0.4.3"

[dependencies.md5]
version = "0.7.0"

[dependencies.tungstenite]
version = "0.26.2"
