[package]
name = "worker"
default-run = "worker"
version = "0.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["algorithms", "cryptography"]
keywords = ["md5"]
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "ping"
path = "src/ping.rs"

[dependencies]
ctrlc = "3.4.5"
hex.workspace = true
md5.workspace = true
tungstenite.workspace = true
